tests/error/member_redefinition.c
// fail "Error at 'member': Redeclaration of member 'member'."

struct asd{
    int member;
    int member;
};
